fixing css issues in the layout- making footer sticky and center aligning the main card

--- a/work/04-basic-form/public/assets/index.css
+++ b/work/04-basic-form/public/assets/index.css
@@ -17,6 +17,14 @@ body {
     text-align: center;
     padding: 10px 0;
   }
+
+  .grid-container-main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+  }
+  
   
   .card { 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -96,6 +104,7 @@ body {
   }
   
   footer { 
+    position: sticky;
     text-align: center;
     color: black; 
     font-size: 14px;
